--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Agencja</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="index.html">Portfolio</a></li>
           <li><a href="index.html">Kontakt</a></li>
         </ul>
       </nav>
@@ -21,5 +21,147 @@
         <li><a href="tel:+48111111111"> +48 111 111 111</a></li>
       </ul>
     </header>
+    <main>
+      <button type="button">Wszystkie</button>
+      <button type="button">Strony</button>
+      <button type="button">Aplikacje</button>
+      <button type="button">Dizajn</button>
+      <button type="button">Marketing</button>
+      <section>
+        <ul>
+          <li>
+            <figure>
+              <img
+                src="images/portfolio1.jpg"
+                alt="threepeople"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3>Technocrack</h3>
+                <p>Strona internetowa</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/portfolio2.pgn (1).jpg"
+                alt="basketboll"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3>Grafika New Orlean vs Golden Star</h3>
+                <p>Dizajn</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/portfolio-1.jpg"
+                alt="seefood"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3>Restauracja Seafood</h3>
+                <p>Aplikacja</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/portfolio-2.jpg"
+                alt="headphones"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3>Projekt Prime</h3>
+                <p>Marketing</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/portfolio5.jpg"
+                alt="boxes"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3>Projekt Boxes</h3>
+                <p>Aplikacja</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="images/111.jpg" alt="screen" width="370" height="294" />
+              <figcaption>
+                <h3>Inspiration has no Borders</h3>
+                <p>Strona internetowa</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/portfolio7.jpg"
+                alt="magazyn"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3>Magazyn Limited Edition</h3>
+                <p>Dizajn</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/portfolio8.jpg"
+                alt="label"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3>Projekt LAB</h3>
+                <p>Marketing</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/portfolio9.jpg"
+                alt="laptop"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3>Growing Business</h3>
+                <p>Aplikacja</p>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="index.html"><span>Web</span>Studio</a>
+      <address>
+        <ul>
+          <li><a>m. Warszawa, Aleje Jerozolimskie 21</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+48111111111"> +48 111 111 111</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
