--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       </ul>
     </header>
     <main>
-      <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+      <h1>ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
       <button type="button">Zamów usługę</button>
       <section>
         <ul>
           <li>
             <h3>LOREM IPSUM</h3>
-            <p>
+            <p class="inn">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel,
               dignissimos at. Exercitationem animi nobis aperiam non debitis
               praesentium facere consequuntur? Itaque dignissimos necessitatibus
