--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>main page</title>
+
+    <!--Google Fonts links-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!--End Google Fonts links-->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
-      <a href="index.html"><span>Web</span>Studio</a>
+      <a class="stil" href="index.html"><span class="web">Web</span>Studio</a>
       <nav>
         <ul>
           <li><a href="index.html">Agencja</a></li>
@@ -16,19 +26,21 @@
           <li><a href="index.html">Kontakt</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <ul class="social-links">
+        <li><a href="mailto:info@S.com">info@devstudio.com</a></li>
         <li><a href="tel:+48111111111"> +48 111 111 111</a></li>
       </ul>
     </header>
     <main>
-      <h1>ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-      <button type="button">Zamów usługę</button>
+      <h1>
+        efektywne rozwiązania dla twojego biznesu
+        <button class="push" type="button">Zamów usługę</button>
+      </h1>
       <section>
         <ul>
           <li>
             <h3>LOREM IPSUM</h3>
-            <p class="inn">
+            <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel,
               dignissimos at. Exercitationem animi nobis aperiam non debitis
               praesentium facere consequuntur? Itaque dignissimos necessitatibus
@@ -93,11 +105,11 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="wall">
         <h2>Nasz zespół</h2>
         <ul>
           <li>
-            <figure>
+            <figure class="man">
               <img
                 src="images/men_image1.jpg"
                 alt="man"
@@ -111,7 +123,7 @@
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="man">
               <img
                 src="images/women_image.jpg"
                 alt="woman"
@@ -125,7 +137,7 @@
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="man">
               <img
                 src="images/men_image2.jpg"
                 alt="second man"
@@ -139,7 +151,7 @@
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="man">
               <img
                 src="images/men_image3.jpg"
                 alt="third man"
@@ -156,10 +168,12 @@
       </section>
     </main>
     <footer>
-      <a href="index.html"><span>Web</span>Studio</a>
+      <a class="stiltwo" href="index.html"
+        ><span class="web">Web</span>Studio</a
+      >
       <address>
         <ul>
-          <li><a>m. Warszawa, Aleje Jerozolimskie 21</a></li>
+          <li>m. Warszawa, Aleje Jerozolimskie 21</li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+48111111111"> +48 111 111 111</a></li>
         </ul>
