--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>portfolio</title>
+    <!--Google Fonts links-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!--End Google Fonts links-->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
-      <a href="index.html"><span>Web</span>Studio</a>
+      <a class="stil" href="index.html"><span class="web">Web</span>Studio</a>
       <nav>
         <ul>
           <li><a href="index.html">Agencja</a></li>
@@ -15,17 +25,19 @@
           <li><a href="index.html">Kontakt</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="social-links">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+48111111111"> +48 111 111 111</a></li>
       </ul>
     </header>
     <main>
-      <button type="button">Wszystkie</button>
-      <button type="button">Strony</button>
-      <button type="button">Aplikacje</button>
-      <button type="button">Dizajn</button>
-      <button type="button">Marketing</button>
+      <ul class="secendpush">
+        <li><button class="push" type="button">Wszystkie</button></li>
+        <li><button class="push" type="button">Strony</button></li>
+        <li><button class="push" type="button">Aplikacje</button></li>
+        <li><button class="push" type="button">Dizajn</button></li>
+        <li><button class="push" type="button">Marketing</button></li>
+      </ul>
       <section>
         <ul>
           <li>
@@ -45,7 +57,7 @@
           <li>
             <figure>
               <img
-                src="images/portfolio2.pgn (1).jpg"
+                src="images/portfolio2.pgn(1).jpg"
                 alt="basketboll"
                 width="370"
                 height="294"
@@ -153,10 +165,12 @@
       </section>
     </main>
     <footer>
-      <a href="index.html"><span>Web</span>Studio</a>
+      <a class="stiltwo" href="index.html"
+        ><span class="web">Web</span>Studio</a
+      >
       <address>
         <ul>
-          <li><a>m. Warszawa, Aleje Jerozolimskie 21</a></li>
+          <li>m. Warszawa, Aleje Jerozolimskie 21</li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+48111111111"> +48 111 111 111</a></li>
         </ul>
