--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,9 @@
       <a class="stil" href="index.html"><span class="web">Web</span>Studio</a>
       <nav>
         <ul>
-          <li><a href="index.html">Agencja</a></li>
-          <li><a href="index.html">Portfolio</a></li>
-          <li><a href="index.html">Kontakt</a></li>
+          <li><a class="black-link" href="index.html">Agencja</a></li>
+          <li><a class="black-link" href="index.html">Portfolio</a></li>
+          <li><a class="black-link" href="index.html">Kontakt</a></li>
         </ul>
       </nav>
       <ul class="social-links">
@@ -31,7 +31,7 @@
       </ul>
     </header>
     <main>
-      <ul class="secendpush">
+      <ul class="secend-push">
         <li><button class="push" type="button">Wszystkie</button></li>
         <li><button class="push" type="button">Strony</button></li>
         <li><button class="push" type="button">Aplikacje</button></li>
@@ -165,14 +165,20 @@
       </section>
     </main>
     <footer>
-      <a class="stiltwo" href="index.html"
+      <a class="stil-two" href="index.html"
         ><span class="web">Web</span>Studio</a
       >
       <address>
         <ul>
           <li>m. Warszawa, Aleje Jerozolimskie 21</li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+48111111111"> +48 111 111 111</a></li>
+          <li>
+            <a class="address-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="address-link" href="tel:+48111111111"> +48 111 111 111</a>
+          </li>
         </ul>
       </address>
     </footer>
