--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="pl">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>main page</title>
 
     <!--Google Fonts links-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <!--End Google Fonts links-->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
@@ -84,24 +81,21 @@
               src="images/image1.jpg"
               alt="komputer"
               width="370"
-              height="294"
-            />
+              height="294">
           </li>
           <li>
             <img
               src="images/image2.jpg"
               alt="komputer2"
               width="370"
-              height="294"
-            />
+              height="294">
           </li>
           <li>
             <img
               src="images/image3.jpg"
               alt="tablet"
               width="370"
-              height="294"
-            />
+              height="294">
           </li>
         </ul>
       </section>
@@ -114,8 +108,7 @@
                 src="images/men_image1.jpg"
                 alt="man"
                 width="270"
-                height="368"
-              />
+                height="368">
               <figcaption>
                 <h3>John Doe</h3>
                 <p>Product Designer</p>
@@ -128,8 +121,7 @@
                 src="images/women_image.jpg"
                 alt="woman"
                 width="270"
-                height="368"
-              />
+                height="368">
               <figcaption>
                 <h3>John Doe</h3>
                 <p>Frontend Developer</p>
@@ -142,8 +134,7 @@
                 src="images/men_image2.jpg"
                 alt="second man"
                 width="270"
-                height="368"
-              />
+                height="368">
               <figcaption>
                 <h3>John Doe</h3>
                 <p>Marketing</p>
@@ -156,8 +147,7 @@
                 src="images/men_image3.jpg"
                 alt="third man"
                 width="270"
-                height="368"
-              />
+                height="368">
               <figcaption>
                 <h3>John Doe</h3>
                 <p>UI Designer</p>
@@ -168,16 +158,13 @@
       </section>
     </main>
     <footer>
-      <a class="stil-two" href="index.html"
-        ><span class="web">Web</span>Studio</a
-      >
+      <a class="stil-two" href="index.html"><span class="web">Web</span>Studio</a>
       <address>
         <ul>
           <li>m. Warszawa, Aleje Jerozolimskie 21</li>
           <li>
             <a class="address-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+              >info@devstudio.com</a>
           </li>
           <li>
             <a class="address-link" href="tel:+48111111111"> +48 111 111 111</a>
