--- a/portfolio.html
+++ b/portfolio.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="pl">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
     <!--Google Fonts links-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <!--End Google Fonts links-->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
@@ -46,8 +43,7 @@
                 src="images/portfolio1.jpg"
                 alt="threepeople"
                 width="370"
-                height="294"
-              />
+                height="294">
               <figcaption>
                 <h3>Technocrack</h3>
                 <p>Strona internetowa</p>
@@ -60,8 +56,7 @@
                 src="images/portfolio2.pgn(1).jpg"
                 alt="basketboll"
                 width="370"
-                height="294"
-              />
+                height="294">
               <figcaption>
                 <h3>Grafika New Orlean vs Golden Star</h3>
                 <p>Dizajn</p>
@@ -74,8 +69,7 @@
                 src="images/portfolio-1.jpg"
                 alt="seefood"
                 width="370"
-                height="294"
-              />
+                height="294">
               <figcaption>
                 <h3>Restauracja Seafood</h3>
                 <p>Aplikacja</p>
@@ -88,8 +82,7 @@
                 src="images/portfolio-2.jpg"
                 alt="headphones"
                 width="370"
-                height="294"
-              />
+                height="294">
               <figcaption>
                 <h3>Projekt Prime</h3>
                 <p>Marketing</p>
@@ -102,8 +95,7 @@
                 src="images/portfolio5.jpg"
                 alt="boxes"
                 width="370"
-                height="294"
-              />
+                height="294">
               <figcaption>
                 <h3>Projekt Boxes</h3>
                 <p>Aplikacja</p>
@@ -112,7 +104,7 @@
           </li>
           <li>
             <figure>
-              <img src="images/111.jpg" alt="screen" width="370" height="294" />
+              <img src="images/111.jpg" alt="screen" width="370" height="294">
               <figcaption>
                 <h3>Inspiration has no Borders</h3>
                 <p>Strona internetowa</p>
@@ -125,8 +117,7 @@
                 src="images/portfolio7.jpg"
                 alt="magazyn"
                 width="370"
-                height="294"
-              />
+                height="294">
               <figcaption>
                 <h3>Magazyn Limited Edition</h3>
                 <p>Dizajn</p>
@@ -139,8 +130,7 @@
                 src="images/portfolio8.jpg"
                 alt="label"
                 width="370"
-                height="294"
-              />
+                height="294">
               <figcaption>
                 <h3>Projekt LAB</h3>
                 <p>Marketing</p>
@@ -153,8 +143,7 @@
                 src="images/portfolio9.jpg"
                 alt="laptop"
                 width="370"
-                height="294"
-              />
+                height="294">
               <figcaption>
                 <h3>Growing Business</h3>
                 <p>Aplikacja</p>
@@ -165,16 +154,12 @@
       </section>
     </main>
     <footer>
-      <a class="stil-two" href="index.html"
-        ><span class="web">Web</span>Studio</a
-      >
+      <a class="stil-two" href="index.html"><span class="web">Web</span>Studio</a>
       <address>
         <ul>
           <li>m. Warszawa, Aleje Jerozolimskie 21</li>
           <li>
-            <a class="address-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
             <a class="address-link" href="tel:+48111111111"> +48 111 111 111</a>
