--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li><a class="black-link" href="index.html">Kontakt</a></li>
         </ul>
       </nav>
-      <ul class="social-links">
+      <ul>
         <li>
           <a class="social-links" href="mailto:info@S.com"
             >info@devstudio.com</a
@@ -173,7 +173,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="wall-secend">
       <a class="stil-two" href="index.html"
         ><span class="web">Web</span>Studio</a
       >
